force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductCategory3Name__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductCategory3Name__c</fullName>
    <label>Product Category 3</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductCategory3Name</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>