force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductIndexNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductIndexNumber__c</fullName>
    <label>Product Index Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductIndexNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>