force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductListName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductListName__c</fullName>
    <label>Product List Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductListName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>