force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__ProductTotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductTotalDiscountAmount__c</fullName>
    <label>Product Total Discount Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductTotalDiscountAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>