force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__rel_1702009476458_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009476458_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCartProductEngagement_Shoppi_rel</label>
    <referenceTo>ssot__ShoppingCartEngagement__dlm</referenceTo>
    <relationshipLabel>ShoppingCartProductEngagement_Shoppi_rel</relationshipLabel>
    <relationshipName>rel_1702009476458_end</relationshipName>
    <type>Lookup</type>
</CustomField>