force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__rel_1702009508677_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009508677_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCartProductEngagement_Indivi_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ShoppingCartProductEngagement_Indivi_rel</relationshipLabel>
    <relationshipName>rel_1702009508677_end</relationshipName>
    <type>Lookup</type>
</CustomField>