force-app/main/default/objects/ssot__ShoppingCartProductEngagement__dlm/fields/ssot__rel_1729795198395_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729795198395_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShoppingCartProductEngagement_Person_rel</label>
    <referenceTo>ssot__PersonalizationLog__dlm</referenceTo>
    <relationshipLabel>ShoppingCartProductEngagement_Person_rel</relationshipLabel>
    <relationshipName>rel_1729795198395_end</relationshipName>
    <type>Lookup</type>
</CustomField>